#34 add a placeholder to email field

--- a/WebSite/wwwroot/RemindPassword.html
+++ b/WebSite/wwwroot/RemindPassword.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div style="display: table-cell; width: 100%">
-        <input id="email" style="width: 265px">
+        <input id="email" type="email" style="width: 265px" placeholder="Email address">
         <button type="button" class="btn btn-sm" onclick="hide()">x</button>
     </div>
     <br>
